Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-917

Avrogencpp does not insert avro prefix for avro headers in the generated files.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.6.0
    • c++
    • None

    Description

      The generated files have include directives like #include "Specific.hh". This forces the users to add things like -I/usr/local/avro to their build scripts.If, instead, the generated code had #include "avro/Specific.hh" the users can use something like -I/usr/local (or omit it altogether because many systems may already have /usr/local in their include paths).

      Attachments

        1. AVRO-917.patch
          3 kB
          Thiruvalluvan M. G.

        Activity

          People

            thiru_mg Thiruvalluvan M. G.
            thiru_mg Thiruvalluvan M. G.
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: