AVRO-917. Avrogencpp does not insert avro prefix for avro headers in the generated files.

git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1182341 13f79535-47bb-0310-9956-ffa450edef68